# context-finder-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INTEGRATION_TEST_REPORT.md  PHASE_1_RESULTS.md  PHILOSOPHY.md  README.md  REPO_RULES.md  USAGE_EXAMPLES.md  audit.sh  audit.toml  benchmark_phase2.sh  test_batch_search.sh  test_integration.sh  test_quality.sh
crates/batch-ref/: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: cache.rs  daemon.rs  flags.rs  graph_cache.rs  grpc.rs  heartbeat.rs  http_api.rs  lib.rs  main.rs  metrics.rs  models.rs  report.rs  server_security.rs
crates/cli/src/command/: context.rs  domain.rs  freshness.rs  mod.rs  path_filters.rs  warm.rs
crates/cli/src/command/infra/: health.rs
crates/cli/src/command/services/: capabilities.rs  eval.rs  index.rs  meaning.rs  mod.rs  repo_onboarding_pack.rs  search.rs
crates/cli/tests/: auto_reindex.rs  batch_action.rs  compare.rs  daemon_ttl.rs  eval.rs  eval_compare.rs  graph_nodes_routing.rs  index_state_meta.rs  indexing_regressions.rs  profile_validation.rs  search_flags.rs  server_safety.rs  text_search_action.rs
crates/code-chunker/: Cargo.toml
crates/code-chunker/src/: ast_analyzer.rs  chunker.rs  config.rs  error.rs  language.rs  lib.rs  strategy.rs  types.rs
crates/code-chunker/tests/: ast_analyzer_nested_mods.rs
crates/graph/: Cargo.toml
crates/graph/src/: assembler.rs  builder.rs  error.rs  graph.rs  lib.rs  types.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: error.rs  health.rs  index_lock.rs  index_state.rs  indexer.rs  lib.rs  limits.rs  scanner.rs  stats.rs  watcher.rs  watermark_io.rs
crates/indexer/tests/: corpus_rebuild.rs  watch_flow.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: index_warmup.rs  lib.rs  main.rs  mcp_daemon.rs  runtime_env.rs  stdio_hybrid.rs  test_support.rs  tools.rs
crates/mcp-server/src/tools/: atlas_pack.rs  batch.rs  catalog.rs  chunk_summary.rs  context_doc.rs  context_legend.rs  cpv1.rs  cursor.rs  doc_context.rs  evidence_fetch.rs  external_memory.rs  file_slice.rs  grep_context.rs  list_files.rs  ls.rs  map.rs  meaning_common.rs  meaning_diagram.rs  meaning_focus.rs  meaning_pack.rs  mod.rs  notebook_apply_suggest.rs  notebook_edit.rs  notebook_pack.rs  notebook_store.rs  notebook_suggest.rs  notebook_types.rs  repo_onboarding_pack.rs  runbook_pack.rs  secrets.rs  util.rs  worktree_pack.rs
crates/mcp-server/src/tools/dispatch/: budgets.rs  cursor_store.rs  doctor_helpers.rs  mod.rs  service.rs  tool_router_hints.rs
crates/mcp-server/src/tools/dispatch/cursor_store/: mod.rs  persist.rs
crates/mcp-server/src/tools/dispatch/read_pack/: anchor_scan.rs  budget_trim.rs  candidates.rs  context.rs  cursor_repair.rs  cursors.rs  file_cursor.rs  file_limits.rs  fs_scan.rs  grep_cursor.rs  intent_file.rs  intent_grep.rs  intent_memory.rs  intent_onboarding.rs  intent_query.rs  intent_recall.rs  intent_resolve.rs  memory_cursor.rs  memory_overview.rs  memory_snippets.rs  mod.rs  onboarding_command.rs  onboarding_docs.rs  onboarding_topics.rs  overlap.rs  prepare.rs  project_facts.rs  recall.rs  recall_cursor.rs  recall_directives.rs  recall_keywords.rs  recall_ops.rs  recall_paths.rs  recall_scoring.rs  recall_snippets.rs  recall_structural.rs  recall_trim.rs  retry.rs  runner.rs  session.rs  (+1 more)
crates/mcp-server/src/tools/dispatch/root/: mod.rs  resolve.rs  service.rs  session_defaults.rs
crates/mcp-server/src/tools/dispatch/router/: atlas_pack.rs  batch.rs  capabilities.rs  context.rs  context_pack.rs  cursor_alias.rs  doctor.rs  error.rs  evidence_fetch.rs  explain.rs  file_slice.rs  grep_context.rs  help.rs  impact.rs  index.rs  list_files.rs  ls.rs  map.rs  meaning_focus.rs  meaning_pack.rs  mod.rs  notebook_apply_suggest.rs  notebook_edit.rs  notebook_pack.rs  notebook_suggest.rs  overview.rs  path_disambiguation_tests.rs  read_pack.rs  repo_onboarding_pack.rs  root.rs  runbook_pack.rs  search.rs  semantic_fallback.rs  (+4 more)
crates/mcp-server/src/tools/external_memory/: branchmind.rs  codex_cli.rs
crates/mcp-server/src/tools/schemas/: atlas_pack.rs  batch.rs  capabilities.rs  content_format.rs  context.rs  context_pack.rs  doctor.rs  evidence_fetch.rs  explain.rs  file_slice.rs  grep_context.rs  help.rs  impact.rs  index.rs  list_files.rs  ls.rs  map.rs  meaning_focus.rs  meaning_pack.rs  mod.rs  notebook_apply_suggest.rs  notebook_edit.rs  notebook_pack.rs  notebook_suggest.rs  overview.rs  read_pack.rs  repo_onboarding_pack.rs  response_mode.rs  root.rs  runbook_pack.rs  search.rs  text_search.rs  trace.rs  worktree_pack.rs
crates/mcp-server/tests/: anchor_guardrails.rs  atlas_pack.rs  atlas_pack_quality.rs  auto_index.rs  auto_root.rs  batch_v2.rs  content_length_smoke.rs  context_output.rs  coverage_hints.rs  cursor_persistence.rs  cursor_root_mismatch.rs  edge_cases_smoke.rs  error_provenance.rs  explain_concept_fallback.rs  full_mode_metadata.rs  golden_agent_journeys.rs  grep_context.rs  help_tool.rs  impact_fallback.rs  index_warmup_fallback.rs  low_noise_read_tools.rs  mcp_smoke.rs  meaning_mode.rs  multi_session_indexing_stress.rs  newline_smoke.rs  notebook_runbook.rs  oneshot_eof.rs  overview_fallback.rs  pagination.rs  print_tools.rs  read_pack_branchmind_overlay.rs  read_pack_file_intent_errors.rs  read_pack_file_path_root.rs  read_pack_freshness_fallback.rs  read_tools_filesystem_authoritative.rs  repo_onboarding_pack.rs  secrets.rs  semantic_fallback_next_actions.rs  shared_backend.rs  startup_race.rs  (+4 more)
crates/meaning/: Cargo.toml
crates/meaning/src/: common.rs  focus.rs  lib.rs  model.rs  pack.rs  paths.rs  secrets.rs
crates/meaning/tests/: artifact_store_discovery.rs
crates/search/: Cargo.toml
crates/search/src/: anchor.rs  context_search.rs  error.rs  fusion.rs  fuzzy.rs  hybrid.rs  lib.rs  multi.rs  profile.rs  query_classifier.rs  query_expansion.rs  rerank.rs
crates/vector-store/: Cargo.toml
crates/vector-store/src/: corpus.rs  embedding_cache.rs  embeddings.rs  error.rs  gpu_env.rs  graph_node_store.rs  hnsw_index.rs  lib.rs  paths.rs  store.rs  templates.rs  types.rs
(+194 files in other folders)
