[workspace]
resolver = "2"
members = [
    "crates/code-chunker",
    "crates/vector-store",
    "crates/indexer",
    "crates/search",
    "crates/cli", "crates/graph",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["AI Context Tools Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/context-finder"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = "0.3"

# Tree-sitter for AST parsing
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"

# Vector operations
ndarray = "0.16"

# Fuzzy matching
nucleo-matcher = "0.3"

# Text processing
regex = "1.11"
unicode-segmentation = "1.12"

# Caching
lru = "0.12"

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"

# File system
walkdir = "2.5"
ignore = "0.4"
globset = "0.4"

# Testing
pretty_assertions = "1.4"
tempfile = "3.13"

# Embeddings (using fastembed or similar)
fastembed = "4.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
