[workspace]
resolver = "2"
members = [
    "crates/code-chunker",
    "crates/vector-store",
    "crates/indexer",
    "crates/search",
    "crates/cli",
    "crates/graph",
    "crates/mcp-server",
]
exclude = ["proto"]

[workspace.package]
version = "0.1.1"
edition = "2021"
authors = ["AI Context Tools Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/AmirTlinov/context-finder"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1.19"

# Tree-sitter for AST parsing
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"

# Vector operations
ndarray = "0.16"

# Fuzzy matching
nucleo-matcher = "0.3"

# Text processing
regex = "1.11"
unicode-segmentation = "1.12"

# Caching
lru = "0.12"

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"

# File system
walkdir = "2.5"
ignore = "0.4"
hyper = { version = "0.14", features = ["full"] }
prometheus = "0.13"
globset = "0.4"
notify = "6.1"

# Testing
pretty_assertions = "1.4"
tempfile = "3.13"

# Embeddings (GPU via ONNX Runtime)
ort = { version = "2.0.0-rc.10", features = ["cuda"] }
tokenizers = "0.22.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
