[package]
name = "context-batch-ref"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "JSON $ref resolver for Context batch payloads"

[dependencies]
serde_json.workspace = true

[dev-dependencies]
serde_json.workspace = true
