[package]
name = "context-finder-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "context-finder"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
context-code-chunker = { path = "../code-chunker" }
context-vector-store = { path = "../vector-store" }
context-indexer = { path = "../indexer" }
context-search = { path = "../search" }
context-graph = { path = "../graph" }

# CLI
clap.workspace = true

# Async
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true

# Logging
log.workspace = true
env_logger.workspace = true
