[package]
name = "context-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"

[[bin]]
name = "context"
path = "src/main.rs"

[[bin]]
name = "context-finder"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
context-code-chunker = { path = "../code-chunker" }
context-vector-store = { path = "../vector-store" }
context-indexer = { path = "../indexer" }
context-search = { path = "../search" }
context-graph = { path = "../graph" }
context-batch-ref = { path = "../batch-ref" }
context-protocol = { path = "../protocol" }

# CLI
clap.workspace = true

# Async
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
dirs = "5.0"
itertools = "0.14"
glob = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
sha2 = "0.10"

# Error handling
anyhow.workspace = true

# Logging
log.workspace = true
env_logger.workspace = true

# Graph cache utilities
petgraph = "0.6"
blake3 = "1.5"
bytes = "1.6"
axum = "0.7"
once_cell = "1.19"
tonic = { version = "0.11", features = ["transport"] }
prost = "0.12"

[dev-dependencies]
assert_cmd = "2.0"
serde_json.workspace = true
tempfile.workspace = true

[build-dependencies]
tonic-build = "0.11"
protoc-bin-vendored = "3.2.0"
