[package]
name = "context-code-chunker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Tree-sitter for AST parsing
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-python.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-typescript.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
log.workspace = true

# Text processing
regex.workspace = true
unicode-segmentation.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
