[package]
name = "context-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP server for Context - semantic code search for AI agents"

[[bin]]
name = "context-mcp"
path = "src/main.rs"

[[bin]]
name = "context-finder-mcp"
path = "src/main.rs"

[dependencies]
# Workspace dependencies (reuse existing crates)
context-code-chunker = { path = "../code-chunker" }
context-vector-store = { path = "../vector-store" }
context-indexer = { path = "../indexer" }
context-search = { path = "../search" }
context-graph = { path = "../graph" }
context-batch-ref = { path = "../batch-ref" }
context-protocol = { path = "../protocol" }
context-meaning = { path = "../meaning" }
petgraph = "0.6"

# MCP SDK
rmcp = { version = "0.8", features = ["client", "server", "transport-io", "transport-child-process", "macros"] }

# Async runtime
tokio = { version = "1.41", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0.0-alpha.17"
sha2 = "0.10"
regex = "1.11"
base64 = "0.22"
flate2 = "1.0"

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging (stderr only for MCP)
log.workspace = true
env_logger.workspace = true

# Utilities
dirs = "5.0"
libc = "0.2"
fs2 = "0.4"
getrandom = "0.2"

[dev-dependencies]
rmcp = { version = "0.8", features = ["client", "transport-child-process"] }
tempfile = { workspace = true }
