[package]
name = "context-search"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Workspace dependencies
context-code-chunker = { path = "../code-chunker" }
context-indexer = { path = "../indexer" }
context-vector-store = { path = "../vector-store" }
context-graph = { path = "../graph" }
context-protocol = { path = "../protocol" }

# Async
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
globset.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
log.workspace = true

# Fuzzy matching
nucleo-matcher.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
proptest.workspace = true
